fixed overflow when transition

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 #App {
   height: 100vh;
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.88), black 90%);
+  overflow: hidden;
 
   main {
     height: calc(100vh - 120px);
